# Calculator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/headers/: csv_parser.h  data.h  json_parser.h
src/init/: init.json
test/: test.csv
